[gd_scene load_steps=9 format=2]

[ext_resource path="res://nivel/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://nivel/Piso.tscn" type="PackedScene" id=3]
[ext_resource path="res://nivel/PlataformasFlotantes.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objetos/Camera2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://nivel/Nivel 4/Nivel4.gd" type="Script" id=6]
[ext_resource path="res://Objetos/Boton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objetos/plataforma.tscn" type="PackedScene" id=8]

[node name="Nivel4" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_vertical_guides_": [ 2271.29 ]
}

[node name="Background" parent="." instance=ExtResource( 1 )]
position = Vector2( -8.55444, 7.50557 )
scale = Vector2( 1.25, 1.25 )

[node name="Background2" parent="." instance=ExtResource( 1 )]
position = Vector2( 1035.22, 8.94655 )
scale = Vector2( 1.25, 1.25 )

[node name="Piso" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( -2, -536870899, 0, -1, -536870899, 0, -65536, -536870899, 0, -65535, -536870899, 0, -65534, -536870899, 0, -65533, -536870899, 0, -65532, -536870899, 0, -65531, -536870899, 0, -65530, -536870899, 0, -65529, -536870899, 0, -65528, -536870899, 0, -65527, -536870899, 0, -65526, -536870899, 0, -65525, -536870899, 0, -65524, -536870899, 0, -65523, -536870899, 0, -65522, -536870899, 0, -65521, -536870899, 0, -65520, -536870899, 0, -65519, -536870899, 0, -65518, -536870899, 0, -65517, -536870899, 0, -65516, -536870899, 0, -65515, -536870899, 0, -65514, -536870899, 0, -65513, -536870899, 0, -65512, -536870899, 0, -65511, -536870899, 0, -65510, -536870899, 0, -65509, -536870899, 0, -65508, -536870899, 0, -65507, -536870899, 0, -65506, -536870899, 0, -65505, -536870899, 0, -65504, -536870899, 0, -65503, -536870899, 0, -65502, -536870899, 0, -65501, -536870899, 0, -65500, -536870899, 0, -65499, -536870899, 0, -65498, -536870899, 0, -65497, -536870899, 0, -65496, -536870899, 0, -65495, -536870899, 0, -65494, -536870899, 0, -65493, -536870899, 0, -65492, -536870899, 0, -65491, -536870899, 0, -65490, -536870899, 0, -65489, -536870899, 0, -65488, -536870899, 0, -65487, -536870899, 0, -65486, -536870899, 0, -65485, -536870899, 0, -65484, -536870899, 0, -65483, -536870899, 0, -65482, -536870899, 0, -65481, -536870899, 0, -65480, -536870899, 0, -65479, -536870899, 0, -65478, -536870899, 0, -65477, -536870899, 0, -65476, -536870899, 0, -65475, -536870899, 0, -65474, -1073741805, 0, -65473, -1073741805, 0, -65472, -1073741805, 0, -65471, -1073741805, 0, -65470, -1073741805, 0, -65469, -1073741805, 0, -65468, -1073741805, 0, -65467, -1073741805, 0, -65466, -1073741805, 0, 65534, -536870899, 0, 61, 536870924, 0, 62, -1073741805, 0, 63, -1073741805, 0, 64, -1073741805, 0, 65, -1073741805, 0, 66, -1073741805, 0, 67, -1073741805, 0, 68, -1073741805, 0, 69, -1073741805, 0, 70, -1073741805, 0, 131070, -536870899, 0, 65597, 536870924, 0, 65598, -1073741805, 0, 65599, -1073741805, 0, 65600, -1073741805, 0, 65601, -1073741805, 0, 65602, -1073741805, 0, 65603, -1073741805, 0, 65604, -1073741805, 0, 65605, -1073741805, 0, 65606, -1073741805, 0, 196606, 11, 0, 131133, 536870924, 0, 131134, -1073741805, 0, 131135, -1073741805, 0, 131136, -1073741805, 0, 131137, -1073741805, 0, 131138, -1073741805, 0, 131139, -1073741805, 0, 131140, -1073741805, 0, 131141, -1073741805, 0, 131142, -1073741805, 0, 262142, 11, 0, 196669, 536870924, 0, 196670, -1073741805, 0, 196671, -1073741805, 0, 196672, -1073741805, 0, 196673, -1073741805, 0, 196674, -1073741805, 0, 196675, -1073741805, 0, 196676, -1073741805, 0, 196677, -1073741805, 0, 196678, -1073741805, 0, 327678, 11, 0, 262205, -536870895, 0, 262206, -1073741805, 0, 262207, -1073741805, 0, 262208, -1073741805, 0, 262209, -1073741805, 0, 262210, -1073741805, 0, 262211, -1073741805, 0, 262212, -1073741805, 0, 262213, -1073741805, 0, 262214, -1073741805, 0, 393214, 11, 0, 327734, 536870933, 0, 327735, 8, 0, 327736, 1073741841, 0, 327739, 1610612753, 0, 327740, 1610612752, 0, 327741, -1073741805, 0, 327742, -1073741805, 0, 327743, -1073741805, 0, 327744, -1073741805, 0, 327745, -1073741805, 0, 327746, -1073741805, 0, 327747, -1073741805, 0, 327748, -1073741805, 0, 327749, -1073741805, 0, 327750, -1073741805, 0, 458750, 11, 0, 393270, -2147483648, 0, 393271, -1073741805, 0, 393272, -1073741805, 0, 393273, -1073741805, 0, 393274, -1073741805, 0, 393275, -1073741805, 0, 393276, -1073741805, 0, 393277, -1073741805, 0, 393278, -1073741805, 0, 393279, -1073741805, 0, 393280, -1073741805, 0, 393281, -1073741805, 0, 393282, -1073741805, 0, 393283, -1073741805, 0, 393284, -1073741805, 0, 393285, -1073741805, 0, 393286, -1073741805, 0, 524286, 11, 0, 458806, 1073741837, 0, 458807, -1073741805, 0, 458808, -1073741805, 0, 458809, -1073741805, 0, 458810, -1073741805, 0, 458811, -1073741805, 0, 458812, -1073741805, 0, 458813, -1073741805, 0, 458814, -1073741805, 0, 458815, -1073741805, 0, 458816, -1073741805, 0, 458817, -1073741805, 0, 458818, -1073741805, 0, 458819, -1073741805, 0, 458820, -1073741805, 0, 458821, -1073741805, 0, 458822, -1073741805, 0, 589822, 11, 0, 524308, 536870933, 0, 524309, 7, 0, 524310, 0, 0, 524311, 1, 0, 524312, 8, 0, 524313, 1073741840, 0, 524314, 1, 0, 524315, 7, 0, 524316, 8, 0, 524317, 21, 0, 524342, -2147483648, 0, 524343, -1073741805, 0, 524344, -1073741805, 0, 524345, -1073741805, 0, 524346, -1073741805, 0, 524347, -1073741805, 0, 524348, -1073741805, 0, 524349, -1073741805, 0, 524350, -1073741805, 0, 524351, -1073741805, 0, 524352, -1073741805, 0, 524353, -1073741805, 0, 524354, -1073741805, 0, 524355, -1073741805, 0, 524356, -1073741805, 0, 524357, -1073741805, 0, 524358, -1073741805, 0, 655358, 11, 0, 589844, 1073741838, 0, 589845, -1073741805, 0, 589846, -1073741805, 0, 589847, -1073741805, 0, 589848, -1073741805, 0, 589849, -1073741805, 0, 589850, -1073741805, 0, 589851, -1073741805, 0, 589852, -1073741805, 0, 589853, -2147483632, 0, 589861, 10, 0, 589862, 0, 0, 589863, 1, 0, 589864, 536870922, 0, 589878, -1610612719, 0, 589879, -1073741805, 0, 589880, -1073741805, 0, 589881, -1073741805, 0, 589882, -1073741805, 0, 589883, -1073741805, 0, 589884, -1073741805, 0, 589885, -1073741805, 0, 589886, -1073741805, 0, 589887, -1073741805, 0, 589888, -1073741805, 0, 589889, -1073741805, 0, 589890, -1073741805, 0, 589891, -1073741805, 0, 589892, -1073741805, 0, 589893, -1073741805, 0, 589894, -1073741805, 0, 720894, 11, 0, 655380, 1610612757, 0, 655381, 1610612743, 0, 655382, 1610612744, 0, 655383, 17, 0, 655384, -1073741810, 0, 655385, -536870898, 0, 655386, -1073741810, 0, 655387, 536870929, 0, 655388, 16, 0, 655389, 1073741845, 0, 655397, -1610612719, 0, 655398, -1073741805, 0, 655399, -1073741805, 0, 655400, -536870911, 0, 655411, 1610612757, 0, 655414, 536870924, 0, 655415, -1073741805, 0, 655416, -1073741805, 0, 655417, -1073741805, 0, 655418, -1073741805, 0, 655419, -1073741805, 0, 655420, -1073741805, 0, 655421, -1073741805, 0, 655422, -1073741805, 0, 655423, -1073741805, 0, 655424, -1073741805, 0, 655425, -1073741805, 0, 655426, -1073741805, 0, 655427, -1073741805, 0, 655428, -1073741805, 0, 655429, -1073741805, 0, 655430, -1073741805, 0, 786430, 11, 0, 720933, 536870924, 0, 720934, -1073741805, 0, 720935, -1073741805, 0, 720936, -536870912, 0, 720948, 1610612757, 0, 720949, 16, 0, 720950, -536870895, 0, 720951, -1073741805, 0, 720952, -1073741805, 0, 720953, -1073741805, 0, 720954, -1073741805, 0, 720955, -1073741805, 0, 720956, -1073741805, 0, 720957, -1073741805, 0, 720958, -1073741805, 0, 720959, -1073741805, 0, 720960, -1073741805, 0, 720961, -1073741805, 0, 720962, -1073741805, 0, 720963, -1073741805, 0, 720964, -1073741805, 0, 720965, -1073741805, 0, 720966, -1073741805, 0, 851966, 11, 0, 786469, 536870924, 0, 786470, -1073741805, 0, 786471, -1073741805, 0, 786472, -536870905, 0, 786486, -2147483648, 0, 786487, -1073741805, 0, 786488, -1073741805, 0, 786489, -1073741805, 0, 786490, -1073741805, 0, 786491, -1073741805, 0, 786492, -1073741805, 0, 786493, -1073741805, 0, 786494, -1073741805, 0, 786495, -1073741805, 0, 786496, -1073741805, 0, 786497, -1073741805, 0, 786498, -1073741805, 0, 786499, -1073741805, 0, 786500, -1073741805, 0, 786501, -1073741805, 0, 786502, -1073741805, 0, 917502, 11, 0, 852005, 536870924, 0, 852006, -1073741805, 0, 852007, -1073741805, 0, 852008, -536870904, 0, 852022, 1073741837, 0, 852023, -1073741805, 0, 852024, -1073741805, 0, 852025, -1073741805, 0, 852026, -1073741805, 0, 852027, -1073741805, 0, 852028, -1073741805, 0, 852029, -1073741805, 0, 852030, -1073741805, 0, 852031, -1073741805, 0, 852032, -1073741805, 0, 852033, -1073741805, 0, 852034, -1073741805, 0, 852035, -1073741805, 0, 852036, -1073741805, 0, 852037, -1073741805, 0, 852038, -1073741805, 0, 983038, 11, 0, 917541, 536870924, 0, 917542, -1073741805, 0, 917543, -1073741805, 0, 917544, -2147483631, 0, 917558, -2147483648, 0, 917559, -1073741805, 0, 917560, -1073741805, 0, 917561, -1073741805, 0, 917562, -1073741805, 0, 917563, -1073741805, 0, 917564, -1073741805, 0, 917565, -1073741805, 0, 917566, -1073741805, 0, 917567, -1073741805, 0, 917568, -1073741805, 0, 917569, -1073741805, 0, 917570, -1073741805, 0, 917571, -1073741805, 0, 917572, -1073741805, 0, 917573, -1073741805, 0, 917574, -1073741805, 0, 1048574, 11, 0, 1048575, 1, 0, 983040, 8, 0, 983041, 7, 0, 983042, 1, 0, 983043, 7, 0, 983044, 8, 0, 983045, 7, 0, 983046, 8, 0, 983047, 7, 0, 983048, 1610612752, 0, 983049, 536870912, 0, 983050, 7, 0, 983051, 1610612752, 0, 983052, 8, 0, 983053, 7, 0, 983054, 536870922, 0, 983058, 536870933, 0, 983059, 536870912, 0, 983060, 536870913, 0, 983061, 536870920, 0, 983062, 536870912, 0, 983063, 536870913, 0, 983064, 536870912, 0, 983065, 536870920, 0, 983066, 536870919, 0, 983067, 536870913, 0, 983068, 536870920, 0, 983069, 536870912, 0, 983070, 536870920, 0, 983071, 536870919, 0, 983072, 536870922, 0, 983077, -536870895, 0, 983078, -1073741805, 0, 983079, -1073741805, 0, 983080, 1073741836, 0, 983093, -1610612718, 0, 983094, -1073741805, 0, 983095, -1073741805, 0, 983096, -1073741805, 0, 983097, -1073741805, 0, 983098, -1073741805, 0, 983099, -1073741805, 0, 983100, -1073741805, 0, 983101, -1073741805, 0, 983102, -1073741805, 0, 983103, -1073741805, 0, 983104, -1073741805, 0, 983105, -1073741805, 0, 983106, -1073741805, 0, 983107, -1073741805, 0, 983108, -1073741805, 0, 983109, -1073741805, 0, 983110, -1073741805, 0, 1048576, 19, 0, 1048577, 19, 0, 1048578, 19, 0, 1048579, 19, 0, 1048580, 19, 0, 1048581, 19, 0, 1048582, 19, 0, 1048583, 19, 0, 1048584, -1073741805, 0, 1048585, -1073741805, 0, 1048586, -1073741805, 0, 1048587, -1073741805, 0, 1048588, -1073741805, 0, 1048589, -1073741805, 0, 1048590, -536870912, 0, 1048594, -1073741816, 0, 1048595, -1073741805, 0, 1048596, -1073741805, 0, 1048597, -1073741805, 0, 1048598, -1073741805, 0, 1048599, -1073741805, 0, 1048600, -1073741805, 0, 1048601, -1073741805, 0, 1048602, -1073741805, 0, 1048603, -1073741805, 0, 1048604, -1073741805, 0, 1048605, -1073741805, 0, 1048606, -1073741805, 0, 1048607, -1073741805, 0, 1048608, -536870911, 0, 1048613, 1073741838, 0, 1048614, -1073741805, 0, 1048615, -1073741805, 0, 1048616, -1073741807, 0, 1048629, -1073741816, 0, 1048630, -1073741805, 0, 1048631, -1073741805, 0, 1048632, -1073741805, 0, 1048633, -1073741805, 0, 1048634, -1073741805, 0, 1048635, -1073741805, 0, 1048636, -1073741805, 0, 1048637, -1073741805, 0, 1048638, -1073741805, 0, 1048639, -1073741805, 0, 1048640, -1073741805, 0, 1048641, -1073741805, 0, 1048642, -1073741805, 0, 1048643, -1073741805, 0, 1048644, -1073741805, 0, 1048645, -1073741805, 0, 1048646, -1073741805, 0, 1114112, 19, 0, 1114113, 19, 0, 1114114, 19, 0, 1114115, 19, 0, 1114116, 19, 0, 1114117, 19, 0, 1114118, 19, 0, 1114119, 19, 0, 1114120, -1073741805, 0, 1114121, -1073741805, 0, 1114122, -1073741805, 0, 1114123, -1073741805, 0, 1114124, -1073741805, 0, 1114125, -1073741805, 0, 1114126, -2147483631, 0, 1114130, -2147483648, 0, 1114131, -1073741805, 0, 1114132, -1073741805, 0, 1114133, -1073741805, 0, 1114134, -1073741805, 0, 1114135, -1073741805, 0, 1114136, -1073741805, 0, 1114137, -1073741805, 0, 1114138, -1073741805, 0, 1114139, -1073741805, 0, 1114140, -1073741805, 0, 1114141, -1073741805, 0, 1114142, -1073741805, 0, 1114143, -1073741805, 0, 1114144, -536870912, 0, 1114149, 1073741838, 0, 1114150, -1073741805, 0, 1114151, -1073741805, 0, 1114152, -1073741808, 0, 1114165, -1073741817, 0, 1114166, -1073741805, 0, 1114167, -1073741805, 0, 1114168, -1073741805, 0, 1114169, -1073741805, 0, 1114170, -1073741805, 0, 1114171, -1073741805, 0, 1114172, -1073741805, 0, 1114173, -1073741805, 0, 1114174, -1073741805, 0, 1114175, -1073741805, 0, 1114176, -1073741805, 0, 1114177, -1073741805, 0, 1114178, -1073741805, 0, 1114179, -1073741805, 0, 1114180, -1073741805, 0, 1114181, -1073741805, 0, 1114182, -1073741805, 0, 1179648, 19, 0, 1179649, 19, 0, 1179650, 19, 0, 1179651, 19, 0, 1179652, 19, 0, 1179653, 19, 0, 1179654, 19, 0, 1179655, 19, 0, 1179656, -1073741805, 0, 1179657, -1073741805, 0, 1179658, -1073741805, 0, 1179659, -1073741805, 0, 1179660, -1073741805, 0, 1179661, 536870930, 0, 1179666, -2147483648, 0, 1179667, -1073741805, 0, 1179668, -1073741805, 0, 1179669, -1073741805, 0, 1179670, -1073741805, 0, 1179671, -1073741805, 0, 1179672, -1073741805, 0, 1179673, -1073741805, 0, 1179674, -1073741805, 0, 1179675, -1073741805, 0, 1179676, -1073741805, 0, 1179677, -1073741805, 0, 1179678, -1073741805, 0, 1179679, -1073741805, 0, 1179680, -536870905, 0, 1179685, 1073741838, 0, 1179686, -1073741805, 0, 1179687, -1073741805, 0, 1179688, -536870911, 0, 1179701, -1073741817, 0, 1179702, -1073741805, 0, 1179703, -1073741805, 0, 1179704, -1073741805, 0, 1179705, -1073741805, 0, 1179706, -1073741805, 0, 1179707, -1073741805, 0, 1179708, -1073741805, 0, 1179709, -1073741805, 0, 1179710, -1073741805, 0, 1179711, -1073741805, 0, 1179712, -1073741805, 0, 1179713, -1073741805, 0, 1179714, -1073741805, 0, 1179715, -1073741805, 0, 1179716, -1073741805, 0, 1179717, -1073741805, 0, 1179718, -1073741805, 0, 1245184, 19, 0, 1245185, 19, 0, 1245186, 19, 0, 1245187, 19, 0, 1245188, 19, 0, 1245189, 19, 0, 1245190, 19, 0, 1245191, 19, 0, 1245192, -1073741805, 0, 1245193, -1073741805, 0, 1245194, -1073741805, 0, 1245195, -1073741805, 0, 1245196, -1073741805, 0, 1245197, 1610612754, 0, 1245202, -2147483640, 0, 1245203, -1073741805, 0, 1245204, -1073741805, 0, 1245205, -1073741805, 0, 1245206, -1073741805, 0, 1245207, -1073741805, 0, 1245208, -1073741805, 0, 1245209, -1073741805, 0, 1245210, -1073741805, 0, 1245211, -1073741805, 0, 1245212, -1073741805, 0, 1245213, -1073741805, 0, 1245214, -1073741805, 0, 1245215, -1073741805, 0, 1245216, -536870904, 0, 1245221, 1073741838, 0, 1245222, -1073741805, 0, 1245223, -1073741805, 0, 1245224, -1073741805, 0, 1245225, -1073741805, 0, 1245226, -1073741805, 0, 1245227, -1073741805, 0, 1245228, -1073741805, 0, 1245229, -1073741805, 0, 1245230, -1073741805, 0, 1245231, -1073741805, 0, 1245232, -1073741805, 0, 1245233, -1073741805, 0, 1245234, -1073741805, 0, 1245235, -1073741805, 0, 1245236, -1073741805, 0, 1245237, -1073741805, 0, 1245238, -1073741805, 0, 1245239, -1073741805, 0, 1245240, -1073741805, 0, 1245241, -1073741805, 0, 1245242, -1073741805, 0, 1245243, -1073741805, 0, 1245244, -1073741805, 0, 1245245, -1073741805, 0, 1245246, -1073741805, 0, 1245247, -1073741805, 0, 1245248, -1073741805, 0, 1245249, -1073741805, 0, 1245250, -1073741805, 0, 1245251, -1073741805, 0, 1245252, -1073741805, 0, 1245253, -1073741805, 0, 1245254, -1073741805, 0, 1310720, -1073741805, 0, 1310721, -1073741805, 0, 1310722, -1073741805, 0, 1310723, -1073741805, 0, 1310724, -1073741805, 0, 1310725, -1073741805, 0, 1310726, -1073741805, 0, 1310727, -1073741805, 0, 1310728, -1073741805, 0, 1310729, -1073741805, 0, 1310730, -1073741805, 0, 1310731, -1073741805, 0, 1310732, -1073741805, 0, 1310733, -1073741805, 0, 1310734, -1073741807, 0, 1310738, -2147483641, 0, 1310739, -1073741805, 0, 1310740, -1073741805, 0, 1310741, -1073741805, 0, 1310742, -1073741805, 0, 1310743, -1073741805, 0, 1310744, -1073741805, 0, 1310745, -1073741805, 0, 1310746, -1073741805, 0, 1310747, -1073741805, 0, 1310748, -1073741805, 0, 1310749, -1073741805, 0, 1310750, -1073741805, 0, 1310751, -1073741805, 0, 1310752, -1073741805, 0, 1310753, -1073741805, 0, 1310754, -1073741805, 0, 1310755, -1073741805, 0, 1310756, -1073741805, 0, 1310757, -1073741805, 0, 1310758, -1073741805, 0, 1310759, -1073741805, 0, 1310760, -1073741805, 0, 1310761, -1073741805, 0, 1310762, -1073741805, 0, 1310763, -1073741805, 0, 1310764, -1073741805, 0, 1310765, -1073741805, 0, 1310766, -1073741805, 0, 1310767, -1073741805, 0, 1310768, -1073741805, 0, 1310769, -1073741805, 0, 1310770, -1073741805, 0, 1310771, -1073741805, 0, 1310772, -1073741805, 0, 1310773, -1073741805, 0, 1310774, -1073741805, 0, 1310775, -1073741805, 0, 1310776, -1073741805, 0, 1310777, -1073741805, 0, 1310778, -1073741805, 0, 1310779, -1073741805, 0, 1310780, -1073741805, 0, 1310781, -1073741805, 0, 1310782, -1073741805, 0, 1310783, -1073741805, 0, 1310784, -1073741805, 0, 1310785, -1073741805, 0, 1310786, -1073741805, 0, 1310787, -1073741805, 0, 1310788, -1073741805, 0, 1310789, -1073741805, 0, 1310790, -1073741805, 0, 1376256, -1073741805, 0, 1376257, -1073741805, 0, 1376258, -1073741805, 0, 1376259, -1073741805, 0, 1376260, -1073741805, 0, 1376261, -1073741805, 0, 1376262, -1073741805, 0, 1376263, -1073741805, 0, 1376264, -1073741805, 0, 1376265, -1073741805, 0, 1376266, -1073741805, 0, 1376267, -1073741805, 0, 1376268, -1073741805, 0, 1376269, -1073741805, 0, 1376270, -1073741805, 0, 1376271, 536870920, 0, 1376272, 536870913, 0, 1376273, 536870912, 0, 1376274, -1073741805, 0, 1376275, -1073741805, 0, 1376276, -1073741805, 0, 1376277, -1073741805, 0, 1376278, -1073741805, 0, 1376279, -1073741805, 0, 1376280, -1073741805, 0, 1376281, -1073741805, 0, 1376282, -1073741805, 0, 1376283, -1073741805, 0, 1376284, -1073741805, 0, 1376285, -1073741805, 0, 1376286, -1073741805, 0, 1376287, -1073741805, 0, 1376288, -1073741805, 0, 1376289, -1073741805, 0, 1376290, -1073741805, 0, 1376291, -1073741805, 0, 1376292, -1073741805, 0, 1376293, -1073741805, 0, 1376294, -1073741805, 0, 1376295, -1073741805, 0, 1376296, -1073741805, 0, 1376297, -1073741805, 0, 1376298, -1073741805, 0, 1376299, -1073741805, 0, 1376300, -1073741805, 0, 1376301, -1073741805, 0, 1376302, -1073741805, 0, 1376303, -1073741805, 0, 1376304, -1073741805, 0, 1376305, -1073741805, 0, 1376306, -1073741805, 0, 1376307, -1073741805, 0, 1376308, -1073741805, 0, 1376309, -1073741805, 0, 1376310, -1073741805, 0, 1376311, -1073741805, 0, 1376312, -1073741805, 0, 1376313, -1073741805, 0, 1376314, -1073741805, 0, 1376315, -1073741805, 0, 1376316, -1073741805, 0, 1376317, -1073741805, 0, 1376318, -1073741805, 0, 1376319, -1073741805, 0, 1376320, -1073741805, 0, 1376321, -1073741805, 0, 1376322, -1073741805, 0, 1376323, -1073741805, 0, 1376324, -1073741805, 0, 1376325, -1073741805, 0, 1376326, -1073741805, 0, 1441792, -1073741805, 0, 1441793, -1073741805, 0, 1441794, -1073741805, 0, 1441795, -1073741805, 0, 1441796, -1073741805, 0, 1441797, -1073741805, 0, 1441798, -1073741805, 0, 1441799, -1073741805, 0, 1441800, -1073741805, 0, 1441801, -1073741805, 0, 1441802, -1073741805, 0, 1441803, -1073741805, 0, 1441804, -1073741805, 0, 1441805, -1073741805, 0, 1441806, -1073741805, 0, 1441807, -1073741805, 0, 1441808, -1073741805, 0, 1441809, -1073741805, 0, 1441810, -1073741805, 0, 1441811, -1073741805, 0, 1441812, -1073741805, 0, 1441813, -1073741805, 0, 1441814, -1073741805, 0, 1441815, -1073741805, 0, 1441816, -1073741805, 0, 1441817, -1073741805, 0, 1441818, -1073741805, 0, 1441819, -1073741805, 0, 1441820, -1073741805, 0, 1441821, -1073741805, 0, 1441822, -1073741805, 0, 1441823, -1073741805, 0, 1441824, -1073741805, 0, 1441825, -1073741805, 0, 1441826, -1073741805, 0, 1441827, -1073741805, 0, 1441828, -1073741805, 0, 1441829, -1073741805, 0, 1441830, -1073741805, 0, 1441831, -1073741805, 0, 1441832, -1073741805, 0, 1441833, -1073741805, 0, 1441834, -1073741805, 0, 1441835, -1073741805, 0, 1441836, -1073741805, 0, 1441837, -1073741805, 0, 1441838, -1073741805, 0, 1441839, -1073741805, 0, 1441840, -1073741805, 0, 1441841, -1073741805, 0, 1441842, -1073741805, 0, 1441843, -1073741805, 0, 1441844, -1073741805, 0, 1441845, -1073741805, 0, 1441846, -1073741805, 0, 1441847, -1073741805, 0, 1441848, -1073741805, 0, 1441849, -1073741805, 0, 1441850, -1073741805, 0, 1441851, -1073741805, 0, 1441852, -1073741805, 0, 1441853, -1073741805, 0, 1441854, -1073741805, 0, 1441855, -1073741805, 0, 1441856, -1073741805, 0, 1441857, -1073741805, 0, 1441858, -1073741805, 0, 1441859, -1073741805, 0, 1441860, -1073741805, 0, 1441861, -1073741805, 0, 1441862, -1073741805, 0, 1507328, -1073741805, 0, 1507329, -1073741805, 0, 1507330, -1073741805, 0, 1507331, -1073741805, 0, 1507332, -1073741805, 0, 1507333, -1073741805, 0, 1507334, -1073741805, 0, 1507335, -1073741805, 0, 1507336, -1073741805, 0, 1507337, -1073741805, 0, 1507338, -1073741805, 0, 1507339, -1073741805, 0, 1507340, -1073741805, 0, 1507341, -1073741805, 0, 1507342, -1073741805, 0, 1507343, -1073741805, 0, 1507344, -1073741805, 0, 1507345, -1073741805, 0, 1507346, -1073741805, 0, 1507347, -1073741805, 0, 1507348, -1073741805, 0, 1507349, -1073741805, 0, 1507350, -1073741805, 0, 1507351, -1073741805, 0, 1507352, -1073741805, 0, 1507353, -1073741805, 0, 1507354, -1073741805, 0, 1507355, -1073741805, 0, 1507356, -1073741805, 0, 1507357, -1073741805, 0, 1507358, -1073741805, 0, 1507359, -1073741805, 0, 1507360, -1073741805, 0, 1507361, -1073741805, 0, 1507362, -1073741805, 0, 1507363, -1073741805, 0, 1507364, -1073741805, 0, 1507365, -1073741805, 0, 1507366, -1073741805, 0, 1507367, -1073741805, 0, 1507368, -1073741805, 0, 1507369, -1073741805, 0, 1507370, -1073741805, 0, 1507371, -1073741805, 0, 1507372, -1073741805, 0, 1507373, -1073741805, 0, 1507374, -1073741805, 0, 1507375, -1073741805, 0, 1507376, -1073741805, 0, 1507377, -1073741805, 0, 1507378, -1073741805, 0, 1507379, -1073741805, 0, 1507380, -1073741805, 0, 1507381, -1073741805, 0, 1507382, -1073741805, 0, 1507383, -1073741805, 0, 1507384, -1073741805, 0, 1507385, -1073741805, 0, 1507386, -1073741805, 0, 1507387, -1073741805, 0, 1507388, -1073741805, 0, 1507389, -1073741805, 0, 1507390, -1073741805, 0, 1507391, -1073741805, 0, 1507392, -1073741805, 0, 1507393, -1073741805, 0, 1507394, -1073741805, 0, 1507395, -1073741805, 0, 1507396, -1073741805, 0, 1507397, -1073741805, 0, 1507398, -1073741805, 0 )

[node name="PlataformasFlotantes" parent="." instance=ExtResource( 4 )]
position = Vector2( -687.439, -304.104 )
tile_data = PoolIntArray( 1704060, 18, 0, 1966230, 1610612752, 0, 1966237, -1610612711, 0, 1966239, -2147483623, 0, 2031765, 1610612752, 0, 2031766, 1610612762, 0, 2031767, -536870893, 0, 2097300, -536870896, 0, 2097301, -536870893, 0, 2097303, -536870893, 0, 2162835, 536870935, 0, 2162836, -536870893, 0, 2162837, -536870893, 0, 2162839, -536870893, 0, 2228370, 536870935, 0, 2228372, -536870893, 0, 2228373, -536870893, 0, 2228375, -536870893, 0, 2293821, 28, 0, 2293823, 28, 0, 2293826, 30, 0, 2293828, 31, 0, 2293829, 31, 0, 2293830, 536870940, 0, 2293831, 30, 0, 2293833, 536870940, 0, 2293905, -536870896, 0, 2293906, 1610612762, 0, 2293907, -536870893, 0, 2293908, -536870893, 0, 2293909, -536870893, 0, 2293911, -536870893, 0, 2359380, 1073741844, 0, 2359381, -536870886, 0, 2359440, 536870935, 0, 2359442, -536870893, 0, 2359444, -536870893, 0, 2359445, -536870893, 0, 2359447, -536870893, 0, 2424874, 536870942, 0, 2424876, 536870940, 0, 2424878, 536870940, 0, 2424915, 1073741833, 0, 2424916, 1073741844, 0, 2424917, -1073741804, 0, 2424975, 536870935, 0, 2424977, 1610612762, 0, 2424983, -536870893, 0, 2490451, 1073741833, 0, 2490453, -1073741804, 0, 2490511, 1610612759, 0, 2490513, 18, 0, 2490514, 18, 0, 2490515, 18, 0, 2490516, 18, 0, 2490517, 18, 0, 2490518, 18, 0, 2490519, 18, 0, 2490520, 18, 0, 2555989, -1610612710, 0, 2556051, 18, 0, 2556052, 18, 0, 2556053, 18, 0, 2556054, 18, 0, 2556055, 18, 0, 2556056, 18, 0, 2621587, 536870929, 0, 2621588, 536870930, 0, 2621589, 18, 0, 2621590, 18, 0, 2621591, 18, 0, 2621592, 18, 0, 2687127, 18, 0, 2687128, 18, 0, 2752663, 536870938, 0, 2752664, 536870930, 0, 3997768, 1073741850, 0, 3997775, 1610612762, 0 )

[node name="Plataformas" type="Node2D" parent="."]
position = Vector2( -687.439, -304.104 )

[node name="Plataforma1" type="Node2D" parent="Plataformas"]
position = Vector2( 32.5269, -25.4558 )

[node name="Boton" parent="Plataformas/Plataforma1" instance=ExtResource( 7 )]
position = Vector2( 836.042, 804.43 )

[node name="Plataforma" parent="Plataformas/Plataforma1" instance=ExtResource( 8 )]
position = Vector2( 784.473, 802.358 )

[node name="Plataforma2" type="Node2D" parent="Plataformas"]

[node name="Plataforma" parent="Plataformas/Plataforma2" instance=ExtResource( 8 )]
position = Vector2( 926.655, 568.433 )

[node name="Boton" parent="Plataformas/Plataforma2" instance=ExtResource( 7 )]
position = Vector2( 715.081, 586.225 )

[node name="Plataforma3" type="Node2D" parent="Plataformas"]
position = Vector2( 415.779, -31.8198 )

[node name="Plataforma" parent="Plataformas/Plataforma3" instance=ExtResource( 8 )]
position = Vector2( 1391.66, 634.045 )

[node name="Boton" parent="Plataformas/Plataforma3" instance=ExtResource( 7 )]
position = Vector2( 1104.59, 585.273 )

[node name="PlataformaH" type="Node2D" parent="Plataformas"]
position = Vector2( 838.955, -30.1445 )

[node name="Plataforma" parent="Plataformas/PlataformaH" instance=ExtResource( 8 )]
position = Vector2( 1389.66, 632.043 )

[node name="Boton" parent="Plataformas/PlataformaH" instance=ExtResource( 7 )]
position = Vector2( 1124.58, 617.677 )

[node name="TimerDead" type="Timer" parent="." groups=[
"time",
]]
wait_time = 3.0

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 384.142, 235.856 )

[node name="Camera2D" parent="." instance=ExtResource( 5 )]
zoom = Vector2( 0.25, 0.25 )
limit_right = 2271
[connection signal="apretado" from="Plataformas/Plataforma1/Boton" to="." method="_on_BotonV1_apretado"]
[connection signal="suelto" from="Plataformas/Plataforma1/Boton" to="." method="_on_BotonV1_suelto"]
[connection signal="apretado" from="Plataformas/Plataforma2/Boton" to="." method="_on_BotonV2_apretado"]
[connection signal="suelto" from="Plataformas/Plataforma2/Boton" to="." method="_on_BotonV2_suelto"]
[connection signal="apretado" from="Plataformas/PlataformaH/Boton" to="." method="_on_BotonH_apretado"]
[connection signal="suelto" from="Plataformas/PlataformaH/Boton" to="." method="_on_BotonH_suelto"]
[connection signal="timeout" from="TimerDead" to="." method="_on_TimerDead_timeout"]
